--- a/MMM-Todoist.css
+++ b/MMM-Todoist.css
@@ -1,96 +1,100 @@
-.priority {
-    width: 3px;
-    border-right: 3px;
+.MMM-Todoist .priority {
+  width: 3px;
+  border-right: 3px;
 }
 
-.priority1 {
-    background-color: #D1453B;
+.MMM-Todoist .priority1 {
+  background-color: #d1453b;
 }
 
-.priority2 {
-    background-color: #EB8909;
+.MMM-Todoist .priority2 {
+  background-color: #eb8909;
 }
 
-.priority3 {
-    background-color: #246FE0;
+.MMM-Todoist .priority3 {
+  background-color: #246fe0;
 }
 
-.alignLeft {
-    text-align: left;
+.MMM-Todoist .alignLeft {
+  text-align: left;
 }
 
-.spacerCell {
-    width: 3px;
+.MMM-Todoist .spacerCell {
+  width: 3px;
 }
 
-.overdue {
-    text-decoration: underline #ac0000;
+.MMM-Todoist .overdue {
+  text-decoration: underline #ac0000;
 }
 
-.today {
-    text-decoration: underline #03a05c;
+.MMM-Todoist .today {
+  text-decoration: underline #03a05c;
 }
 
-.tomorrow {
-    text-decoration: underline #166cec;
+.MMM-Todoist .tomorrow {
+  text-decoration: underline #166cec;
 }
 
-.projectcolor {
-    padding: 0 !important;
-    margin-right: 4px !important;
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    border-radius: 12px;
-    vertical-align: top;
-    margin-top: 3px;
+.MMM-Todoist .projectcolor {
+  padding: 0 !important;
+  margin-right: 4px !important;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 12px;
+  vertical-align: top;
+  margin-top: 3px;
 }
 
-
-/* .dueDate {
+/* .MMM-Todoist .dueDate {
     min-width: 100px;
 } */
 
-.todoAvatarImg {
-    border-radius: 50%;
-    /* filter: grayscale(100%); */
-    height: 27px;
-    display: block;
-    margin-left: 10px;
-    margin-right: auto;
+.MMM-Todoist .todoAvatarImg {
+  border-radius: 50%;
+
+  /* filter: grayscale(100%); */
+  height: 27px;
+  display: block;
+  margin-left: 10px;
+  margin-right: auto;
 }
 
-.divTable{
-	display: table;
-	width: 100%;
+.MMM-Todoist .divTable {
+  display: table;
+  width: 100%;
 }
-.divTableRow {
-	display: table-row;
+
+.MMM-Todoist .divTableRow {
+  display: table-row;
 }
-.divTableHeading {
-	background-color: #EEE;
-	display: table-header-group;
+
+.MMM-Todoist .divTableCell,
+.MMM-Todoist .divTableHead {
+  /* border: 1px solid #999999; */
+  display: table-cell;
+
+  /* padding: 3px 10px; */
+  vertical-align: middle;
 }
-.divTableCell, .divTableHead {
-	/* border: 1px solid #999999; */
-	display: table-cell;
-	/* padding: 3px 10px; */
-	vertical-align: middle;
+
+.MMM-Todoist .divTableHeading {
+  background-color: #eee;
+  display: table-header-group;
+  font-weight: bold;
 }
-.divTableHeading {
-	background-color: #EEE;
-	display: table-header-group;
-	font-weight: bold;
+
+.MMM-Todoist .divTableFoot {
+  background-color: #eee;
+  display: table-footer-group;
+  font-weight: bold;
 }
-.divTableFoot {
-	background-color: #EEE;
-	display: table-footer-group;
-	font-weight: bold;
+
+.MMM-Todoist .divTableBody {
+  display: table-row-group;
 }
-.divTableBody {
-	display: table-row-group;
-}
-.todoTextCell {
-    width: 400px;
-    overflow: hidden;
+
+.MMM-Todoist .todoTextCell {
+  width: 400px;
+  overflow: hidden;
 }
