--- a/MMM-Todoist.css
+++ b/MMM-Todoist.css
@@ -46,6 +46,10 @@
   margin-top: 3px;
 }
 
+.MMM-Todoist .label {
+  font-size: 0.75em;
+}
+
 /* .MMM-Todoist .dueDate {
     min-width: 100px;
 } */
